tests/invalid/wrong_arity_function.err_exp
wrong_arity_function.m:029: In clause for predicate `main'/2:
wrong_arity_function.m:029:   error: wrong number of arguments (3; should be 1
wrong_arity_function.m:029:   or 2) in use of constructor `f'.
